--- a/class3-printcommandfunctionalities-CipherSchools.ipynb
+++ b/class3-printcommandfunctionalities-CipherSchools.ipynb
@@ -34,7 +34,7 @@
         }
       ],
       "source": [
-        "print(\"Priyanshu Jha\")"
+        "print(\"KARTIK SALUJA\")"
       ]
     },
     {
