--- a/class3-printcommandfunctionalities-CipherSchools.ipynb
+++ b/class3-printcommandfunctionalities-CipherSchools.ipynb
@@ -29,7 +29,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Priyanshu Jha\n"
+            "Kartik saluja\n"
           ]
         }
       ],
